fixed main heading on small devices

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -420,6 +420,7 @@ body {
         }
         .main-heading {
             margin-top: 1rem !important;
+            font-size: 24px !important;
         }
     }
 
@@ -489,6 +490,7 @@ body {
 
         .main-heading {
             margin-top: 3rem  !important;
+            font-size: 30px !important;
         }
     }
 
